packages/ui-library/src/demo/css/layout.scss
// LAYOUT

// VARS
$layout-nav-link-height: 31px;     // works better as odd number
$layout-nav-offset: 15px;
$sidenav-lineheight: 22px;

#nav {
    .nav-menus {
        -ms-overflow-style: -ms-autohiding-scrollbar;
    }
}

.doc {
    width: 100%;
    position: relative;
    z-index: $zindex__elevated;

    @include transition(all 0.3s);

    h2 {
        float: left;
    }

    .doc-links {
        position: absolute;
        top: 5px;
        right: 0;
        text-align: right;

        a + a {
            margin-left: $spacing-sm;
            position: relative;

            &:before {
                content: '';
                border-left: 1px solid $color-rabbit-fur;
                position: absolute;
                left: -0.5 * $spacing-sm;
                top: 0;
                bottom: 0;
            }
        }
    }
}

.clear-both {
    clear: both;
}

#content {

    .fullscreen {
        .output {
            padding: 0;
            margin: 0;
            border: none;

            &:before {
                display: none;
            }
        }

        .section-content {
            margin: 0;
        }

        .doc .doc-links {
            top: -20px;
            right: -30px;
        }
    }
    .section-content {
        margin: 0 0 0 15px;
    }
    .sub-section {
        padding: 0 0 20px;
    }
    .demo-description {
        line-height: 1.4em;
        margin: 0 0 0 2px;
        ul {
            list-style: square inside;
        }
    }
    .markup-wrapper {
        overflow: hidden;
    }
    .inner-markup-wrapper {
        overflow-x: auto;
        padding: 1em;
    }
    pre.language-markup,
    pre.language-javascript,
    .output {
        position: relative;
        margin-top: 10px;
        margin-bottom: 0;
        padding: 0;

        @include border-radius(3px);

        &:before {
            position: absolute;
            top: -18px;
            left: 2px;
            font-size: 14px;
            @include font-pn-semibold;
        }
    }
    pre.language-markup {
        overflow: visible;

        &:before {
            font-size: 13px;
            color: $color-elephant;
            content: 'MARKUP';
        }
    }
    pre.language-javascript {
        overflow: visible;

        &:before {
            font-size: 13px;
            color: $color-elephant;
            content: 'JAVASCRIPT';
        }
    }
    .output {
        padding: 20px;
        border: 1px dashed $color-elephant;

        &:before {
            font-size: 13px;
            color: $color-elephant;
            content: 'OUTPUT';
        }
        #nav {
            top: 0;
            background: none;
            width: 100%;

            > div {
                display: none;
            }
            &:before {
                content: "Only one LeftNavBar component may be used per page. Refer to the menu on the left as an example.";
                display: inline-block;
                width: 100%;
                font-size: 16px;
                padding: 10px 20px;
            }
        }
    }
}

.attention {
    position: relative;
    margin: 15px 0 30px;
    padding: 10px;
    color: $color-walrus;
    border-left: 10px solid $color-warning-yellow;
    background: $color-elderly;
    @include font-pn-regular;
}

.ui-library-logo {
    height: auto;
    width: auto;
    &--dark {
        fill: $color-slate;
    }
    &--light {
        fill: $color-white;
    }
}

